Colocando na WEB

--- a/index.html
+++ b/index.html
@@ -136,10 +136,8 @@
     <!--Início do Rodapé-->
     <footer>
       <p>
-        Projeto construído para fins didáticos, com o objetivo de colocar em
-        prática os conhecimentos de HTML, CSS e JavaScript aprendidos na DIO._
+        Projeto construído para fins didáticos por Vinícius Roberto!
       </p>
-      <img src="assets/images/footer/logo.svg" alt="">
     </footer>
     <!--Fim do Rodapé-->
 
